[package]
name = "screeps-starter-rust"
version = "0.0.0"
authors = []
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3"
log = "0.4"
fern = "0.6"
screeps-game-api = { git = "https://github.com/rustyscreeps/screeps-game-api", tag = "screeps-game-api-0.15.0" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
serde = "1.0"
serde_json = "1.0"
console_error_panic_hook = "0.1.7"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["custom"] }
itertools = "0.11.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
panic = "abort"
opt-level = 3
lto = true

[package.metadata.wasm-pack.profile.release]
# Replace the following with `wasm-opt = ["-O4", "-g"]` (or with whatever flag
# combo you'd like) to enable wasm-opt optimization, which wasm-pack will try to install
# automatically, but must be installed separately on some operating systems
# Removing the `"-g"` will further decrease the size of the binary at but removes function names,
# making stack traces upon panic less useful
# wasm-opt = false
wasm-opt = ["-O4", "-g", "--disable-sign-ext"]

[features]
default = []
